# foreman

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
foreman/: __init__.py  cli.py  config.py
foreman/agents/: __init__.py  aria.py  base.py  nat.py  nick.py  steve.py  tony.py
foreman/connectors/: __init__.py  base.py  github.py  jira.py  linear.py  slack.py
foreman/core/: __init__.py  db.py  events.py  memory.py  prioritizer.py  synthesis.py
foreman/daemon/: __init__.py  runner.py  scheduler.py
foreman/llm/: __init__.py  client.py
foreman/llm/prompts/: aria_briefing.txt  aria_standup.txt  memory_synthesis.txt  nat_triage.txt  nick.txt  steve.txt  tony_review.txt
foreman/routing/: __init__.py  dedup.py  rules.py
foreman/ui/: __init__.py  notifier.py  theme.py  tui.py
scripts/: bootstrap.sh
tests/: test_github_connector.py
